--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/helpers": "^1.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
+        "maatwebsite/excel": "^3.1",
         "unisharp/laravel-filemanager": "^2.1"
     },
     "require-dev": {
